Funcionammiento parcial del analizador lexico